--- a/css/style.css
+++ b/css/style.css
@@ -1184,6 +1184,38 @@ main {
  * Экраны ошибки и успеха загрузки изображения
  */
 
+.server_error {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.error_content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin-top: 20px;
+  height: 150px;
+
+  border-radius: 10px;
+  background-color: #ff4949;
+}
+
+.error_text {
+  text-align: center;
+  font-size: 26px;
+  font-weight: bold;
+}
+
 .error,
 .success {
   position: fixed;
