--- a/11/css/style.css
+++ b/11/css/style.css
@@ -1216,6 +1216,14 @@ main {
   font-weight: bold;
 }
 
+.error-message {
+  margin: 0 auto 20px;
+  padding: 10px;
+  width: 450px;
+  border-radius: 5px;;
+  background-color: #ff4f4fd3;
+}
+
 .error,
 .success {
   position: fixed;
