--- a/css/style.css
+++ b/css/style.css
@@ -1185,12 +1185,11 @@ main {
  */
 
 .server_error {
-  position: fixed;
+  position: absolute;
   display: flex;
   justify-content: center;
   top: 0;
   left: 0;
-  z-index: 2;
 
   width: 100%;
   height: 100%;
